# yawl

./: .gitignore  Makefile  README.md  example.sql  pyproject.toml  setup.cfg
.github/workflows/: yawl-build.yml  yawl-checks.yml
docs/: clients.rst  conf.py  index.rst  workflows.rst
tests/: test_dummy.py
yawl/: main.py
yawl/clients/: bigquery.py  bigquery_datatransfer.py
yawl/shared/: constants.py
yawl/workflows/: base.py  bigquery_workflow.py  queue.py  tables.py
yawl_coverage/: index.html  status.json  yawl___init___py.html  yawl_clients___init___py.html  yawl_clients_bigquery_py.html
