[tool.poetry]
name = "yawl"
version = "0.1.0"
description = "Yet Another WorkLoad - for BigQuery"
authors = ["Gabriel Benvegmi <gabriel.benvegmi[at]outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
google-cloud-bigquery = "^2.6.0"
google-cloud-bigquery-storage = "2.0.0"
pandas = "^1.3.2"
pytest-xdist = "^2.3.0"
google-cloud-bigquery-datatransfer = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
safety = "^1.10.3"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
